crates/jni/tests/ui/bind_java_type/fail/core_type_without_jni_core.rs
// Test that core Java types cannot be bound without __jni_core = true

jni_macros::bind_java_type! {
    rust_type = MyObject,
    java_type = "java.lang.Object",
}

fn main() {}
